name: radio-control
version: 0.1
license: MIT
license-file: LICENSE
author: Julian Blake Kongslie
maintainer: jblake@omgwallhack.org
build-type: Simple
cabal-version: >=1.8

executable radio-control
 main-is: Main.hs
 build-depends:
  aeson,
  attoparsec-conduit,
  base,
  conduit,
  containers,
  http-types,
  network,
  process,
  utf8-string,
  wai,
  wai-handler-fastcgi
 hs-source-dirs: src
 ghc-options: -O3 -threaded
